tools/fleet/fixtures/packets/invalid/unauthorized-push.case
source=valid-worker-final.packet
mutation=set Worker branches pushed to yes
expected=invalid
